Update README and CMakeLists after configuring Eigen.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -13,9 +13,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 # OpenMP.
 find_package(OpenMP REQUIRED)
+if(OpenMP_CXX_FOUND)
+    add_definitions(-DEIGEN_DONT_PARALLELIZE)
+endif()
 
 # Include directories.
-include_directories("./lib/eigen-3.3.7")
+include_directories("../external/eigen")
 include_directories("./core/include")
 execute_process(COMMAND bash -c "python3-config --includes|sed 's/-I//g'|awk '{print $1;}'" OUTPUT_VARIABLE PYTHON_INCLUDES)
 include_directories(${PYTHON_INCLUDES})
