--- a/environment.yml
+++ b/environment.yml
@@ -3,64 +3,60 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2020.4.5.1=py37_0
-  - cycler=0.10.0=py37_0
-  - dbus=1.13.14=hb2f20db_0
-  - expat=2.2.6=he6710b0_0
+  - blas=1.0=openblas
+  - ca-certificates=2020.6.24=0
+  - certifi=2020.6.20=py38_0
+  - cycler=0.10.0=py38_0
+  - dbus=1.13.16=hb2f20db_0
+  - expat=2.2.9=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.63.1=h3eb4bd4_1
+  - freetype=2.10.2=h5ab3b9f_0
+  - glib=2.65.0=h3eb4bd4_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb31296c_0
   - icu=58.2=he6710b0_3
-  - imageio=2.8.0=py_0
-  - intel-openmp=2020.1=217
   - jpeg=9b=h024ee3a_2
-  - kiwisolver=1.2.0=py37hfd86e86_0
+  - kiwisolver=1.2.0=py38hfd86e86_0
+  - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.3=he6710b0_1
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - libopenblas=0.3.10=h5a2b251_0
   - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
   - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - lz4-c=1.9.2=he6710b0_0
-  - matplotlib=3.1.3=py37_0
-  - matplotlib-base=3.1.3=py37hef1b27d_0
-  - mkl=2020.1=217
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.0.15=py37ha843d7b_0
-  - mkl_random=1.1.1=py37h0573a6f_0
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.10=he19cac6_1
+  - lz4-c=1.9.2=he6710b0_1
+  - matplotlib=3.3.1=0
+  - matplotlib-base=3.3.1=py38h817c723_0
   - ncurses=6.2=he6710b0_1
-  - numpy=1.18.1=py37h4f9e942_0
-  - numpy-base=1.18.1=py37hde5b4d6_1
-  - olefile=0.46=py37_0
+  - nomkl=3.0=0
+  - numpy=1.19.1=py38h30dfecb_0
+  - numpy-base=1.19.1=py38h75fe3a5_0
+  - olefile=0.46=py_0
   - openssl=1.1.1g=h7b6447c_0
-  - pcre=8.43=he6710b0_0
-  - pillow=7.1.2=py37hb39fc2d_0
-  - pip=20.0.2=py37_3
+  - pcre=8.44=he6710b0_0
+  - pillow=7.2.0=py38hb39fc2d_0
+  - pip=20.2.2=py38_0
   - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - python=3.7.7=hcff3b4d_5
+  - pyqt=5.9.2=py38h05f1152_4
+  - python=3.8.5=hcff3b4d_0
   - python-dateutil=2.8.1=py_0
   - qt=5.9.7=h5867ecd_1
   - readline=8.0=h7b6447c_0
-  - scipy=1.4.1=py37h0b6359f_0
-  - setuptools=46.4.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.14.0=py37_0
-  - sqlite=3.31.1=h62c20be_1
+  - setuptools=49.6.0=py38_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py_0
+  - sqlite=3.33.0=h62c20be_0
   - swig=3.0.12=h38cdd7d_3
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.4=py37h7b6447c_1
-  - wheel=0.34.2=py37_0
+  - tk=8.6.10=hbc83047_0
+  - tornado=6.0.4=py38h7b6447c_1
+  - wheel=0.34.2=py38_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.4=h0b5b093_3
+  - zstd=1.4.5=h9ceee32_0
 prefix: /home/taodu/libraries/miniconda3/envs/diff_stokes_flow
