--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,13 @@
 name: diff_stokes_flow
 channels:
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - blas=1.0=openblas
-  - ca-certificates=2020.7.22=0
-  - certifi=2020.6.20=py38_0
+  - ca-certificates=2020.6.20=hecda079_0
+  - certifi=2020.6.20=py38h32f6830_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.16=hb2f20db_0
   - expat=2.2.9=he6710b0_2
@@ -39,7 +40,7 @@ dependencies:
   - numpy=1.19.1=py38h30dfecb_0
   - numpy-base=1.19.1=py38h75fe3a5_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=h7b6447c_0
+  - openssl=1.1.1h=h516909a_0
   - pcre=8.44=he6710b0_0
   - pillow=7.2.0=py38hb39fc2d_0
   - pip=20.2.2=py38_0
@@ -47,6 +48,7 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - python=3.8.5=hcff3b4d_0
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
   - qt=5.9.7=h5867ecd_1
   - readline=8.0=h7b6447c_0
   - scipy=1.5.2=py38habc2bb6_0
@@ -57,6 +59,7 @@ dependencies:
   - swig=3.0.12=h38cdd7d_3
   - tk=8.6.10=hbc83047_0
   - tornado=6.0.4=py38h7b6447c_1
+  - tqdm=4.50.1=pyh9f0ad1d_0
   - wheel=0.34.2=py38_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
