--- a/environment.yml
+++ b/environment.yml
@@ -6,10 +6,14 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - blas=1.0=openblas
-  - ca-certificates=2020.6.20=hecda079_0
-  - certifi=2020.6.20=py38h32f6830_0
+  - ca-certificates=2020.7.22=0
+  - certifi=2020.6.20=py38_0
+  - cloudpickle=1.6.0=py_0
   - cycler=0.10.0=py38_0
+  - cytoolz=0.11.0=py38h7b6447c_0
+  - dask-core=2.30.0=py_0
   - dbus=1.13.16=hb2f20db_0
+  - decorator=4.4.2=py_0
   - expat=2.2.9=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.2=h5ab3b9f_0
@@ -17,6 +21,7 @@ dependencies:
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb31296c_0
   - icu=58.2=he6710b0_3
+  - imageio=2.9.0=py_0
   - jpeg=9b=h024ee3a_2
   - kiwisolver=1.2.0=py38hfd86e86_0
   - lcms2=2.11=h396b838_0
@@ -36,11 +41,12 @@ dependencies:
   - matplotlib=3.3.1=0
   - matplotlib-base=3.3.1=py38h817c723_0
   - ncurses=6.2=he6710b0_1
+  - networkx=2.5=py_0
   - nomkl=3.0=0
   - numpy=1.19.1=py38h30dfecb_0
   - numpy-base=1.19.1=py38h75fe3a5_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=h516909a_0
+  - openssl=1.1.1h=h7b6447c_0
   - pcre=8.44=he6710b0_0
   - pillow=7.2.0=py38hb39fc2d_0
   - pip=20.2.2=py38_0
@@ -49,8 +55,11 @@ dependencies:
   - python=3.8.5=hcff3b4d_0
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
+  - pywavelets=1.1.1=py38h7b6447c_2
+  - pyyaml=5.3.1=py38h7b6447c_1
   - qt=5.9.7=h5867ecd_1
   - readline=8.0=h7b6447c_0
+  - scikit-image=0.16.2=py38h0573a6f_0
   - scipy=1.5.2=py38habc2bb6_0
   - setuptools=49.6.0=py38_0
   - sip=4.19.13=py38he6710b0_0
@@ -58,10 +67,12 @@ dependencies:
   - sqlite=3.33.0=h62c20be_0
   - swig=3.0.12=h38cdd7d_3
   - tk=8.6.10=hbc83047_0
+  - toolz=0.11.1=py_0
   - tornado=6.0.4=py38h7b6447c_1
   - tqdm=4.50.1=pyh9f0ad1d_0
   - wheel=0.34.2=py38_0
   - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
 prefix: /home/taodu/libraries/miniconda3/envs/diff_stokes_flow
